PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add preliminary PEL support for Objective-C, when *pel-use-objc* user-option is set.
  - Currently support the Basic PEL ~<f12>~ key bindings to get help and access the customization.
  - Add an early version of the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-objc.pdf][𝕻𝔩 - Objective-C]] PDF.
- Add preliminary support for Smalltalk, via GNU Smalltalk, when *pel-use-smalltalk* user-option is set.
  - Currently support the Basic PEL ~<f12>~ key bindings to get help and access the customization.
  - Add an early version of the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pl-smalltalk.pdf][𝕻𝔩 - Smalltalk]] PDF.
- Add 2 new commands to insert short time stamps: *pel-insert-date-wkd-short* (bound to ~<f11> i C-d~), and
  *pel-insert-date-wkd-time-short* (bound to to ~<f11> i C-t~). As with others their string formats are fully customizable.
- Add the *pel-bookmark-set-file* command, bound to ~<f1> ' M-f~.
  Use it to change the name of the Emacs bookmark file quickly for the current buffer.
  With a prefix argument it changes it for all buffers.
  Useful when using bookmark annotations when it's not possible to store these
  annotations inside the text or code files you work with.  Maintaining a separate bookmark file
  will store the important notes and can be sued later to jump to the corresponding location.
- Add the *pel-comment-style* command, bound to ~<f11> ; s~.
  Use it to quickly change the comment style used in the current buffer.
  Emacs 30 currently supports 8 different styles, as specified by the *comment-styles* user option.
  The *comment-style* user option identifies the style selected by default for all buffers.
  The new command allows changing the value for the current buffer quickly and, issued with an argument prefix,